WhatsNext-Vision-Motors-Salesforce-CRM-Tool-main/5. Project Development Phase/force-app/main/default/objects/Vehicle__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>