WhatsNext-Vision-Motors-Salesforce-CRM-Tool-main/5. Project Development Phase/force-app/main/default/objects/Vehicle__c/fields/Stock_Available__c.field-meta.xml
<CustomField>
    <fullName>Stock_Available__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Stock Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>